feat: implement interactive strategic world map and link in portfolio

--- a/edu.html
+++ b/edu.html
@@ -150,6 +150,26 @@
                 </div>
             </div>
         </div>
+
+        <div class="row mt-4">
+            <!-- Geospatial & Data Visualization -->
+            <div class="col-md-6">
+                <div class="card h-100">
+                    <div class="card-header">
+                        Geospatial & Visualization
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">
+                                <h5>Strategic World Map</h5>
+                                <p>Interactive geospatial explorer with strategic regional color-coding and zoom-responsive labels.</p>
+                                <a href="map/mymap.html" class="btn btn-sm btn-outline-primary">Open Map</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="footer shadow-lg mt-5 bg-white">
