--- a/index.html
+++ b/index.html
@@ -482,6 +482,22 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-4 js-slidein my-3">
+                    <div class="card h-100">
+                        <div class="m-3 text-center">
+                            <img loading="lazy" src="https://img.icons8.com/fluent/100/000000/globe.png" class="card-img-top" alt="Project" style="width: 100px; margin: auto;">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-text">STRATEGIC-WORLD-MAP</h5>
+                            <p class="card-text small">Interactive world map with strategic regional analysis and geospatial visualization.</p>
+                            <a href="map/mymap.html" class="btn btn-sm btn-outline-primary mt-2">Explore Map</a>
+                            <ul class="tag">
+                                <li>#GEOSPATIAL</li>
+                                <li>#JS</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
